--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-xo-typescript": "^0.55.1",
     "sass": "^1.57.1",
     "solid-start-node": "^0.2.0",
+    "solid-start-vercel": "^0.2.11",
     "typescript": "^4.9.4",
     "vite": "^3.1.8"
   },
