--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@mdx-js/rollup": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.55.1",
+    "postcss": "^8.4.20",
     "sass": "^1.57.1",
     "solid-start-node": "^0.2.0",
     "solid-start-vercel": "^0.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite": "^3.1.8"
   },
